--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       />
 
       <p>Location: <span data-field="location">Харьков</span></p>
-      <p>Temperature: <span data-field="temp">20&#8451;</span></p>
+      <p>Temperature: <span data-field="temp">20</span>&#8451;</p>
       <p>Humidity: <span data-field="humidity">65%</span></p>
       <p>Wind: <span data-field="wind">3kph</span></p>
       <p>Conditions: <span data-field="conditions">Sunny</span></p>
